--- a/regression_analysis.ipynb
+++ b/regression_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        "1976-08-06                         1.0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "1990-01-08                     52072.0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
        "2019-10-15                    151564.0 -0.469509  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
     "# (Make sure to multiply the pct_change() results by 100)\n",
     "# In this case, you may have to replace inf, -inf values with np.nan\"s\n",
     "# YOUR CODE HERE!\n",
-    "yen_futures['Return'] = (yen_futures[[\"Settle\"]].pct_change() * 100)\n",
+    "yen_futures['Return'] = yen_futures[[\"Settle\"]].pct_change() * 100\n",
     "returns = yen_futures.replace(-np.inf, np.nan).dropna()\n",
     "returns.tail()"
    ]
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,6 @@
        "      <th>Volume</th>\n",
        "      <th>Previous Day Open Interest</th>\n",
        "      <th>Return</th>\n",
-       "      <th>Lagged Returns</th>\n",
        "      <th>Lagged Return</th>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -513,79 +512,73 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2014-02-21</th>\n",
-       "      <td>9772.0</td>\n",
-       "      <td>9776.0</td>\n",
-       "      <td>9725.0</td>\n",
-       "      <td>9758.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>9755.0</td>\n",
-       "      <td>103091.0</td>\n",
-       "      <td>202990.0</td>\n",
-       "      <td>-0.204604</td>\n",
-       "      <td>0.020465</td>\n",
-       "      <td>0.020465</td>\n",
+       "      <th>2019-10-09</th>\n",
+       "      <td>9381.0</td>\n",
+       "      <td>9391.5</td>\n",
+       "      <td>9330.5</td>\n",
+       "      <td>9343.5</td>\n",
+       "      <td>38.5</td>\n",
+       "      <td>9338.0</td>\n",
+       "      <td>99153.0</td>\n",
+       "      <td>145470.0</td>\n",
+       "      <td>-0.410601</td>\n",
+       "      <td>0.170931</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2014-02-24</th>\n",
-       "      <td>9752.0</td>\n",
-       "      <td>9789.0</td>\n",
-       "      <td>9740.0</td>\n",
-       "      <td>9757.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>9757.0</td>\n",
-       "      <td>90654.0</td>\n",
-       "      <td>203114.0</td>\n",
-       "      <td>0.020502</td>\n",
-       "      <td>-0.204604</td>\n",
-       "      <td>-0.204604</td>\n",
+       "      <th>2019-10-10</th>\n",
+       "      <td>9343.5</td>\n",
+       "      <td>9380.5</td>\n",
+       "      <td>9293.5</td>\n",
+       "      <td>9301.0</td>\n",
+       "      <td>34.5</td>\n",
+       "      <td>9303.5</td>\n",
+       "      <td>159397.0</td>\n",
+       "      <td>144474.0</td>\n",
+       "      <td>-0.369458</td>\n",
+       "      <td>-0.410601</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2014-02-25</th>\n",
-       "      <td>9760.0</td>\n",
-       "      <td>9808.0</td>\n",
-       "      <td>9744.0</td>\n",
-       "      <td>9789.0</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>9789.0</td>\n",
-       "      <td>105498.0</td>\n",
-       "      <td>201486.0</td>\n",
-       "      <td>0.327970</td>\n",
-       "      <td>0.020502</td>\n",
-       "      <td>0.020502</td>\n",
+       "      <th>2019-10-11</th>\n",
+       "      <td>9308.5</td>\n",
+       "      <td>9309.0</td>\n",
+       "      <td>9240.0</td>\n",
+       "      <td>9267.0</td>\n",
+       "      <td>52.5</td>\n",
+       "      <td>9251.0</td>\n",
+       "      <td>158810.0</td>\n",
+       "      <td>147471.0</td>\n",
+       "      <td>-0.564304</td>\n",
+       "      <td>-0.369458</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2014-02-26</th>\n",
-       "      <td>9784.0</td>\n",
-       "      <td>9795.0</td>\n",
-       "      <td>9746.0</td>\n",
-       "      <td>9760.0</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>9760.0</td>\n",
-       "      <td>118559.0</td>\n",
-       "      <td>200105.0</td>\n",
-       "      <td>-0.296251</td>\n",
-       "      <td>0.327970</td>\n",
-       "      <td>0.327970</td>\n",
+       "      <th>2019-10-14</th>\n",
+       "      <td>9259.0</td>\n",
+       "      <td>9292.0</td>\n",
+       "      <td>9250.5</td>\n",
+       "      <td>9261.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>9265.0</td>\n",
+       "      <td>69457.0</td>\n",
+       "      <td>153902.0</td>\n",
+       "      <td>0.151335</td>\n",
+       "      <td>-0.564304</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2014-02-27</th>\n",
-       "      <td>9769.0</td>\n",
-       "      <td>9831.0</td>\n",
-       "      <td>9762.0</td>\n",
-       "      <td>9798.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>9798.0</td>\n",
-       "      <td>160638.0</td>\n",
-       "      <td>201246.0</td>\n",
-       "      <td>0.389344</td>\n",
-       "      <td>-0.296251</td>\n",
-       "      <td>-0.296251</td>\n",
+       "      <th>2019-10-15</th>\n",
+       "      <td>9264.5</td>\n",
+       "      <td>9280.0</td>\n",
+       "      <td>9216.5</td>\n",
+       "      <td>9220.0</td>\n",
+       "      <td>43.5</td>\n",
+       "      <td>9221.5</td>\n",
+       "      <td>108342.0</td>\n",
+       "      <td>151564.0</td>\n",
+       "      <td>-0.469509</td>\n",
+       "      <td>0.151335</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -594,30 +587,22 @@
       "text/plain": [
        "              Open    High     Low    Last  Change  Settle    Volume  \\\n",
        "Date                                                                   \n",
-       "2014-02-21  9772.0  9776.0  9725.0  9758.0    20.0  9755.0  103091.0   \n",
-       "2014-02-24  9752.0  9789.0  9740.0  9757.0     2.0  9757.0   90654.0   \n",
-       "2014-02-25  9760.0  9808.0  9744.0  9789.0    32.0  9789.0  105498.0   \n",
-       "2014-02-26  9784.0  9795.0  9746.0  9760.0    29.0  9760.0  118559.0   \n",
-       "2014-02-27  9769.0  9831.0  9762.0  9798.0    38.0  9798.0  160638.0   \n",
+       "2019-10-09  9381.0  9391.5  9330.5  9343.5    38.5  9338.0   99153.0   \n",
+       "2019-10-10  9343.5  9380.5  9293.5  9301.0    34.5  9303.5  159397.0   \n",
+       "2019-10-11  9308.5  9309.0  9240.0  9267.0    52.5  9251.0  158810.0   \n",
+       "2019-10-14  9259.0  9292.0  9250.5  9261.0    14.0  9265.0   69457.0   \n",
+       "2019-10-15  9264.5  9280.0  9216.5  9220.0    43.5  9221.5  108342.0   \n",
        "\n",
-       "            Previous Day Open Interest    Return  Lagged Returns  \\\n",
-       "Date                                                               \n",
-       "2014-02-21                    202990.0 -0.204604        0.020465   \n",
-       "2014-02-24                    203114.0  0.020502       -0.204604   \n",
-       "2014-02-25                    201486.0  0.327970        0.020502   \n",
-       "2014-02-26                    200105.0 -0.296251        0.327970   \n",
-       "2014-02-27                    201246.0  0.389344       -0.296251   \n",
-       "\n",
-       "            Lagged Return  \n",
-       "Date                       \n",
-       "2014-02-21       0.020465  \n",
-       "2014-02-24      -0.204604  \n",
-       "2014-02-25       0.020502  \n",
-       "2014-02-26       0.327970  \n",
-       "2014-02-27      -0.296251  "
+       "            Previous Day Open Interest    Return  Lagged Return  \n",
+       "Date                                                             \n",
+       "2019-10-09                    145470.0 -0.410601       0.170931  \n",
+       "2019-10-10                    144474.0 -0.369458      -0.410601  \n",
+       "2019-10-11                    147471.0 -0.564304      -0.369458  \n",
+       "2019-10-14                    153902.0  0.151335      -0.564304  \n",
+       "2019-10-15                    151564.0 -0.469509       0.151335  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +612,7 @@
     "# YOUR CODE HERE!\n",
     "yen_futures['Lagged Return']= yen_futures['Return'].shift()\n",
     "yen_futures = yen_futures.dropna()\n",
-    "yen_futures.head()"
+    "yen_futures.tail()"
    ]
   },
   {
@@ -639,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -699,6 +684,14 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>2014-02-19</th>\n",
+       "      <td>-0.427829</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-02-20</th>\n",
+       "      <td>-0.020460</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2014-02-21</th>\n",
        "      <td>0.020465</td>\n",
        "    </tr>\n",
@@ -709,14 +702,6 @@
        "    <tr>\n",
        "      <th>2014-02-25</th>\n",
        "      <td>0.020502</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2014-02-26</th>\n",
-       "      <td>0.327970</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2014-02-27</th>\n",
-       "      <td>-0.296251</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -744,17 +729,17 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1216 rows × 1 columns</p>\n",
+       "<p>1218 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "            Lagged Return\n",
        "Date                     \n",
+       "2014-02-19      -0.427829\n",
+       "2014-02-20      -0.020460\n",
        "2014-02-21       0.020465\n",
        "2014-02-24      -0.204604\n",
        "2014-02-25       0.020502\n",
-       "2014-02-26       0.327970\n",
-       "2014-02-27      -0.296251\n",
        "...                   ...\n",
        "2018-12-24      -0.187545\n",
        "2018-12-26       0.834485\n",
@@ -762,10 +747,10 @@
        "2018-12-28       0.464525\n",
        "2018-12-31       0.297242\n",
        "\n",
-       "[1216 rows x 1 columns]"
+       "[1218 rows x 1 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +777,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +786,6 @@
     "# Create a Linear Regression model and fit it to the training data\n",
     "from sklearn.linear_model import LinearRegression\n",
     "# Fit a SKLearn linear regression using just the training set (X_train, Y_train):\n",
-    "# YOUR CODE HERE!\n",
     "model = LinearRegression()\n",
     "model.fit(X_train,y_train)\n",
     "\n"
@@ -818,18 +802,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Make a prediction of \"y\" values using just the test dataset\n",
-    "# YOUR CODE HERE!\n",
     "predictions = model.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -866,27 +849,27 @@
        "    <tr>\n",
        "      <th>2018-01-02</th>\n",
        "      <td>0.297285</td>\n",
-       "      <td>-0.005895</td>\n",
+       "      <td>-0.005887</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-01-03</th>\n",
        "      <td>-0.240479</td>\n",
-       "      <td>-0.006606</td>\n",
+       "      <td>-0.006597</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-01-04</th>\n",
        "      <td>-0.213028</td>\n",
-       "      <td>-0.001322</td>\n",
+       "      <td>-0.001325</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-01-05</th>\n",
        "      <td>-0.353933</td>\n",
-       "      <td>-0.001592</td>\n",
+       "      <td>-0.001594</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-01-08</th>\n",
        "      <td>0.062017</td>\n",
-       "      <td>-0.000208</td>\n",
+       "      <td>-0.000213</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -895,14 +878,14 @@
       "text/plain": [
        "              Return  Predicted Return\n",
        "Date                                  \n",
-       "2018-01-02  0.297285         -0.005895\n",
-       "2018-01-03 -0.240479         -0.006606\n",
-       "2018-01-04 -0.213028         -0.001322\n",
-       "2018-01-05 -0.353933         -0.001592\n",
-       "2018-01-08  0.062017         -0.000208"
+       "2018-01-02  0.297285         -0.005887\n",
+       "2018-01-03 -0.240479         -0.006597\n",
+       "2018-01-04 -0.213028         -0.001325\n",
+       "2018-01-05 -0.353933         -0.001594\n",
+       "2018-01-08  0.062017         -0.000213"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -917,18 +900,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([<matplotlib.axes._subplots.AxesSubplot object at 0x1a206efd10>,\n",
-       "       <matplotlib.axes._subplots.AxesSubplot object at 0x1a206df210>],\n",
+       "array([<matplotlib.axes._subplots.AxesSubplot object at 0x1a190086d0>,\n",
+       "       <matplotlib.axes._subplots.AxesSubplot object at 0x1a190edb90>],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -962,27 +945,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Out-of-Sample Root Mean Squared Error (RMSE): 0.41521640820129047\n"
+      "Out-of-Sample Root Mean Squared Error (RMSE): 0.41521675083603804\n"
      ]
     }
    ],
    "source": [
     "from sklearn.metrics import mean_squared_error\n",
     "# Calculate the mean_squared_error (MSE) on actual versus predicted test \"y\" \n",
-    "# YOUR CODE HERE!\n",
     "mse = mean_squared_error(\n",
     "    results['Return'],\n",
     "    results[\"Predicted Return\"]\n",
     ")\n",
     "# Using that mean-squared-error, calculate the root-mean-squared error (RMSE):\n",
-    "# YOUR CODE HERE!\n",
     "rmse = np.sqrt(mse)\n",
     "print(f\"Out-of-Sample Root Mean Squared Error (RMSE): {rmse}\")"
    ]
@@ -998,14 +979,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In-sample Root Mean Squared Error (RMSE): 0.5663352320297497\n"
+      "In-sample Root Mean Squared Error (RMSE): 0.5658708047560468\n"
      ]
     }
    ],
@@ -1041,14 +1022,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "YOUR CONCLUSIONS HERE!"
+    "CONCLUSIONS!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The model has a root mean square error of 0.415% on out-of-sample data and 0.56633% on in-sample data."
+    "Overall, our model has an root mean squared error of 0.415% on the out-of-sample data, and 0.566% on the in-sample data. This means that the model actually performs slightly better on data that it hasn't seen before. \n",
+    "\n",
+    "Generally however (though not always), we should expect a higher error rate on the out-of-sample data than the in-sample data, since the model is specifically trained to predict the in-sample data as well as it can. It's possible that if we continued adding additional data as time goes on, out-of-sample performance may not continue to be as good (so out-of-sample RMSE may rise)."
    ]
   },
   {
